# Embedded-Linux-project

./: README.md
Embedded_Linux_Project/GUI/Server_Gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  server.cpp  server.hpp
Embedded_Linux_Project/GUI/Server_Gui/Include/: UDPsocket.hpp  channel.hpp  serverChannel.hpp  socket.hpp
Embedded_Linux_Project/GUI/Server_Gui/Resources/qml/: chart.qml  meter.qml
Embedded_Linux_Project/Socket Programming Drivers/: CMakeLists.txt
Embedded_Linux_Project/Socket Programming Drivers/Include/: TCPsocket.hpp  clientChannel.hpp
Embedded_Linux_Project/Socket Programming Drivers/Source/: TCPsocket.cpp  UDPsocket.cpp  client.cpp  clientChannel.cpp  server.cpp  serverChannel.cpp
Embedded_Linux_Project/Yocto Image/conf/: bblayers.conf  local.conf
Embedded_Linux_Project/Yocto Image/meta-client-layer/: README
Embedded_Linux_Project/Yocto Image/meta-client-layer/conf/: layer.conf
Embedded_Linux_Project/Yocto Image/meta-client-layer/recipes-apps/client/: client_1.0.bb
Embedded_Linux_Project/Yocto Image/meta-client-layer/recipes-apps/client/files/: CMakeLists.txt
Embedded_Linux_Project/Yocto Image/meta-client-layer/recipes-apps/client/files/Include/: TCPsocket.hpp  channel.hpp  clientChannel.hpp  socket.hpp
Embedded_Linux_Project/Yocto Image/meta-client-layer/recipes-apps/client/files/Source/: TCPsocket.cpp  client.cpp  clientChannel.cpp
